# otus-cpp

./: .gitignore  CMakeLists.txt
03.homework/: hello_world.cpp  move_me_out.cpp
04.homework/: 4homework.cpp
04.homework/homework/: CMakeCache.txt  CMakeLists.txt
04.homework/homework/include/: Add.hpp  Div.hpp  Mul.hpp  Sub.hpp  Variable.hpp  astnode.hpp  lexer.hpp
04.homework/homework/src/: main.cpp  parser.cpp
05.homework/: statistics.cpp
06.homework/: CMakeLists.txt  main.cpp  serial_container.hpp
project/: CMakeLists.txt  README.md  main.cpp
project/include/: CameraParams.h  MvCamera.h  MvErrorDefine.h  MvISPErrorDefine.h  PixelType.h  comboboxmodel.h  mainWindow.h  modelforlistofcameras.h  objectcamvideo.h  opencvimageprovider.h
project/source/: MvCamera.cpp  comboboxmodel.cpp  mainWindow.cpp  modelforlistofcameras.cpp  objectcamvideo.cpp  opencvimageprovider.cpp
project/ui/: CameraPage.qml  MainPage.qml  ProjectButton.qml  main.qml
